--- a/skypilo_starter_notebook.ipynb
+++ b/skypilo_starter_notebook.ipynb
@@ -148,7 +148,7 @@
    "outputs": [],
    "source": [
     "!mkdir -p ~/.paperspace\n",
-    "!echo \"{\\\"apiKey\\\":\\\"53e1e40a1c1abc86d70173e4262bb2\\\"}\" > ~/.paperspace/config.json"
+    "!echo \"{\\\"apiKey\\\":\\\"5xxxxxx\\\"}\" > ~/.paperspace/config.json"
    ]
   },
   {
